I hate bootstrap (read: "fixed" the stupid footer overlap issue)

--- a/legislation/frontend/static/frontend/extra.css
+++ b/legislation/frontend/static/frontend/extra.css
@@ -26,8 +26,7 @@ em {
 }
 
 .bottom-nav {
-    padding-bottom: 20px;
-    margin-bottom: 20px;
+    padding-bottom: 50px;
 }
 
 .container {
